--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,15 @@
 Makefile.depend
-nativetest
-nativetest.o
-simdmasktest
-simdmasktest.o
-simdRadixSortGeneric
-simdRadixSortGeneric.o
-simdvectest
-simdvectest.o
-styleExamples
-styleExamples.o
-tsimdtest
-tsimdtest.o
-simdvecautotest0
-simdvecautotest0.o
-simdvecautotest1
-simdvecautotest1.o
-simdvecautotestM
-simdvecautotestM.o
 COMPILE_AND_TEST/
 *.tmp
+*.o
+*.ilk
+*.pdb
+nativetest
+simdmasktest
+simdRadixSortGeneric
+simdvectest
+styleExamples
+tsimdtest
+simdvecautotest0
+simdvecautotest1
+simdvecautotestM
