--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .vscode/
-COMPILE_AND_TEST/
-autotest*/
 build*/
-doc_html/
-latex/
+__pycache__/
 *.tmp
 *.o
 *.ilk
@@ -13,26 +10,3 @@ latex/
 *.ii
 *.s
 *.d
-*.tar.gz
-nativetest
-simdmasktest
-simdRadixSortGeneric
-simdvectest
-styleExamples
-tsimdtest
-hacctest
-simdvecautotest0
-simdvecautotest1
-simdvecautotestM
-simdvecautotest_load_store
-BaselineDemo
-IdealScale
-Tilt
-TiltSearchDemo
-warpingSIMDSmallTest
-warpingSIMDTest
-transposeTestAutoGen
-verticalBitonicSortTest
-tsimd_sh.H
-transpose_inplace_autogen_stat.txt
-tsimd_tarfile.list
